# shiny-doodle

./: CMakeLists.txt  Makefile  README.md  a.c  a.cpp  b.c  b.cpp  b.h  board.cpp  c.c  c.h  d.c  d.h  disco.cpp  main.cpp  mbed_overrides.cpp  mbed_overrides.h  mcu.h  platform.cpp  platform.h
boards/: CMakeLists.txt  board.h
boards/disco_l475/: CMakeLists.txt
boards/k64f/: CMakeLists.txt
boards/k64f/xpresso_k64f/: CMakeLists.txt  mcu.cpp
mcu/: CMakeLists.txt
platform/: CMakeLists.txt
